2006-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboboxentry.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/gadgets.py:
	* kiwi/ui/icon.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/spinbutton.py:
	Fetch the right background color instead of hard coding it to white.
	Add a get_background() method to ValidatableProxyWidgetMixin.
	Fixes #2681 (Gustavo Barbieri)

2006-07-03  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Decimal does not allow leading/trailing spaces.

2006-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py: ProxyComboEntry extend ComboMixin. 
	Fixes #2656

2006-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Changes the way localeconv is retrived, so it gets
	checked and fixed if necessary, before using it.
	* tests/test_datatypes.py: Add some pickling tests. Fixes #2654

2006-06-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add use-markup property on column

	* examples/list/tree.py:
	Add a new example
	
	* kiwi/accessor.py:
	Fix a bug when specifying a default value

	* kiwi/ui/objectlist.py:
	Add ObjectTree

2006-06-12  Ronaldo Maia  <romaia@async.com.br>
	
	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/framework/color/completion.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/entrycompletion.py:
	* kiwi/ui/widgets/entry.py:
	Add KiwiEntryCompletion, that suports custom popup window and treeview, and
	make ComboEntry use this completion.	

2006-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_datatypes.py: Import Decimal from datatypes so the tests
	will pass on 2.3

	* kiwi/datatypes.py: Make decimal support conditional

2006-06-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/views.py: